--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "envify": "^3.3.0"
   },
   "peerDependencies": {
-    "newforms": ">=0.12.0",
-    "react": ">=0.13.0"
+    "newforms": "https://github.com/muchbetteradventures/newforms#master",
+    "react": "^16.2.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
@@ -28,8 +28,9 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.1",
-    "newforms": ">=0.12.0",
-    "react": ">=0.13.0",
+    "newforms": "https://github.com/muchbetteradventures/newforms#master",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
     "tape": "^3.5.0",
     "vinyl-source-stream": "^1.1.0"
   },
